--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.995Z",
+        "lastAccessed": "2025-03-04T06:08:15.995Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "c_user",
@@ -86,26 +86,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWVN5fGVNfIBHVhWEJTKPgQ3xqXGb5xYqK3-ww.BnU2fO..AAA.0.0.BnxgNh.AWXV3qsDygk",
+        "value": "0Ce5OZhMDKmMWCT3i.AWVBeeNu0SXMH_ynUrkd2ls2jYOLtty2a-1Msw.BnU2fO..AAA.0.0.Bnxpih.AWVEIsVb8Ag",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "xs",
-        "value": "3%3AjaHq_NXd6LYRBQ%3A2%3A1741030242%3A-1%3A5903",
+        "value": "40%3AcetmvEIeXTfziA%3A2%3A1741068450%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "wd",
@@ -113,25 +113,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "fbl_st",
-        "value": "101326922%3BT%3A29017171",
+        "value": "101031820%3BT%3A29017807",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1741030261",
+        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1741068459",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-03T19:31:24.028Z",
-        "lastAccessed": "2025-03-03T19:31:24.028Z"
+        "creation": "2025-03-04T06:08:15.996Z",
+        "lastAccessed": "2025-03-04T06:08:15.996Z"
     }
 ]
