--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.995Z",
-        "lastAccessed": "2025-03-04T06:08:15.995Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "c_user",
@@ -86,52 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWVBeeNu0SXMH_ynUrkd2ls2jYOLtty2a-1Msw.BnU2fO..AAA.0.0.Bnxpih.AWVEIsVb8Ag",
+        "value": "0Ce5OZhMDKmMWCT3i.AWUKIIZLR9ydeygX-VuuAsGW1U7zq2XGJkznXw.BnU2fO..AAA.0.0.BnxvWO.AWWAfxlqU7k",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "xs",
-        "value": "40%3AcetmvEIeXTfziA%3A2%3A1741068450%3A-1%3A5903",
+        "value": "26%3A3hhLjHqUe8WXwA%3A2%3A1741092239%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "wd",
-        "value": "384x733",
+        "value": "384x832",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "fbl_st",
-        "value": "101031820%3BT%3A29017807",
+        "value": "101233305%3BT%3A29018204",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1741068459",
+        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1741092246",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-04T06:08:15.996Z",
-        "lastAccessed": "2025-03-04T06:08:15.996Z"
+        "creation": "2025-03-04T12:44:23.429Z",
+        "lastAccessed": "2025-03-04T12:44:23.429Z"
     }
 ]
