--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "c_user",
@@ -86,26 +86,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "fr",
-        "value": "0Ce5OZhMDKmMWCT3i.AWXap7No-DMWX5GSWDkg52ePcW283_qsOvrPpg.BnU2fO..AAA.0.0.BnyC4-.AWUyMlh8gd0",
+        "value": "0Ce5OZhMDKmMWCT3i.AWXGp8L_Y1THyW4qLjlFBf_I8EOFWkmkWVMb4w.BnU2fO..AAA.0.0.BnyNVQ.AWUaSmBqV8Q",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "xs",
-        "value": "28%3AgUwTw2PsZqQNLw%3A2%3A1741172288%3A-1%3A5903",
+        "value": "12%3ALkSteOVWFWN5Uw%3A2%3A1741215058%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "wd",
@@ -113,25 +113,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2756%3Btimestamp%3A1741172294",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     },
     {
         "key": "fbl_st",
-        "value": "101337441%3BT%3A29019538",
+        "value": "101330141%3BT%3A29020251",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-05T10:58:28.645Z",
-        "lastAccessed": "2025-03-05T10:58:28.645Z"
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2757%3Btimestamp%3A1741215065",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-05T22:51:34.074Z",
+        "lastAccessed": "2025-03-05T22:51:34.074Z"
     }
 ]
